--- a/src/index.css
+++ b/src/index.css
@@ -148,7 +148,7 @@ h4{
 .blog-details button{
   color: white;
   background-color: rgb(202, 24, 131);
-  width: 25%;
+  width: 15%;
   margin: 1.5rem auto;
   border: 0cap;
   border-radius: 6px;
@@ -156,4 +156,14 @@ h4{
   align-items: center;
 }
 
+@media screen and (max-width: 600px){
+  .blog-details button{
+    width: 40%;
+}
+}
+@media screen and (max-width: 1200px){
+  .blog-details button{
+    width: 25%;
+}
+}
 
